# KV4006-RenderAll

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  render-all-common.py  render-all.py  render_all.py  render_all_lite.py  renderall-view.py  version.py
data/: test.json  test.yaml
templates/: body.html.j2  index.html.j2  test.html
templates/partials/: base.j2  macros.j2
templates/test/: test.html.jinja  test.j2
view-templates/: index.html  view.html
